--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,10 @@ version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[dependencies.rocket_contrib]
-version = "0.4.10"
-default-features = false
-features = ["json"]
-
 [dependencies]
 sys_metrics = "0.2"
-rocket = "0.5.0-rc.1"
 serde = "1.0"
-serde_json = "1.0"
+
+[dependencies.rocket]
+version = "0.5.0-rc.1"
+features = ["json"]
